--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Id Card Genertor</h1>
+    <h1>Id Card Generator</h1>
     <div class="box">
         <h3>Input Form</h3>
         <div class="input">
